# CppProjectTemplate

./: CMakeLists.txt  README.md  main.cpp
Example/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/AnotherExample/: CMakeLists.txt
src/AnotherExample/include/AnotherExample/: AnotherExampleClass.hpp
src/AnotherExample/src/: AnotherExampleClass.cpp
src/Example/: CMakeLists.txt
src/Example/include/Example/: ExampleClass.hpp  ExampleUtils.hpp
src/Example/src/: ExampleClass.cpp  ExampleUtils.cpp
tests/: CMakeLists.txt
tests/AnotherExampleTests/ut/: AnotherExampleClass_tests.cpp  CMakeLists.txt
tests/ExampleTests/ut/: CMakeLists.txt  ExampleClass_tests.cpp  ExampleUtils_tests.cpp
